turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:70: error: value Array is not a member of Array[Int]
possible cause: maybe a semicolon is missing before `value Array'?
                      Array(1, RIGHT, 1)),
                      ^